--- a/SpeckleCore/SpeckleCore.csproj
+++ b/SpeckleCore/SpeckleCore.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Authors>SpecCx</Authors>
     <LangVersion>8.0</LangVersion>
     <Authors>SpecCx</Authors>
@@ -36,10 +36,14 @@
     <PackageReference Include="Piwik.Tracker" Version="3.0.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="WebSocketSharp-NonPreRelease" Version="1.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights">
+      <Version>2.17.0</Version>
+    </PackageReference>
   </ItemGroup>
 
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <PackageReference Include="System.Net.Http" Version="$(MicrosoftCSharpPackageVersion)" />
   </ItemGroup>
+
 </Project>
